<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/textedit_company_name"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_content_horizontal_margin"
            android:layout_marginRight="@dimen/activity_content_horizontal_margin"
            android:background="@drawable/text_cloud"
            android:hint="@string/product_addition_fragment_company_name_hint"
            android:maxLines="1"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/textedit_product_name"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_content_horizontal_margin"
            android:layout_marginRight="@dimen/activity_content_horizontal_margin"
            android:background="@drawable/text_cloud"
            android:hint="@string/product_addition_fragment_product_name_hint"
            android:maxLines="1"
            android:padding="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/layout_not_vegetarian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/backgroundless_button_selector"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageview_not_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/cow_mood_bad"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/product_addition_fragment_not_vegetarian_title"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_vegetarian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:background="@drawable/backgroundless_button_selector"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageview_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/cow_mood_ok"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/product_addition_fragment_vegetarian_title"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_vegan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/backgroundless_button_selector"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageview_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/cow_mood_good"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/product_addition_fragment_vegan_title"/>
            </LinearLayout>
        </LinearLayout>
        <CheckBox
            android:id="@+id/checkbox_was_tested_on_animals"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13dip"
            android:background="@drawable/backgroundless_button_selector"
            android:button="@null"
            android:drawableLeft="@drawable/white_checkbox_selector"
            android:drawablePadding="7dp"
            android:text="@string/product_addition_fragment_was_tested_on_animals_title"/>
    </LinearLayout>
</ScrollView>
